Añadida la dependencia Pillow en pyproject.toml y uv.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "djangorestframework>=3.16.1",
     "markdown>=3.10",
     "psycopg2-binary>=2.9.11",
+    "Pillow",
 ]
 
 [dependency-groups]
