--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,10 @@ services:
 
   # --- SERVICIO WEB (TU DJANGO) ---
   web:
-    build: .
+    build:
+      .
+      # Ejecutar como tu usuario local (asume UID 1000 si no se especifica)
+    user: "${UID:-1000}:${GID:-1000}"
     # Sobreescribe el comando para usar el server de desarrollo
     command: python manage.py runserver 0.0.0.0:8000
     # Mapeamos los archivos de tu PC al contenedor.
