--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "markdown>=3.10",
     "psycopg2-binary>=2.9.11",
     "Pillow",
+    "djangorestframework-simplejwt>=5.5.1",
 ]
 
 [dependency-groups]
