--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "channels>=4.3.2",
     "daphne>=4.2.1",
     "channels-redis>=4.3.0",
+    "drf-spectacular>=0.29.0",
 ]
 
 [dependency-groups]
