--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,9 +5,9 @@ repos:
     rev: v6.0.0
     hooks:
       - id: trailing-whitespace # Elimina espacios al final de las líneas
-        exclude: ^apps/.*/migrations/
+        exclude: ^backend/apps/.*/migrations/
       - id: end-of-file-fixer # Asegura que el archivo termine con una línea vacía
-        exclude: ^apps/.*/migrations/
+        exclude: ^backend/apps/.*/migrations/
       - id: check-yaml # Valida sintaxis de archivos YAML
       - id: check-added-large-files # Evita subir archivos gigantes por error
 
@@ -19,6 +19,8 @@ repos:
       # Linter: Busca errores y ordena imports
       - id: ruff
         args: [--fix] # Intenta corregir los errores automáticamente
+        files: ^backend/
 
       # Formatter: Reemplaza a Black
       - id: ruff-format
+        files: ^backend/
