--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -7,7 +7,13 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "path": "src/app/components",
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "path": "src/app/services",
+          "skipTests": true
         }
       },
       "root": "",
@@ -47,7 +53,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
