--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -14,6 +14,10 @@
         "@schematics/angular:service": {
           "path": "src/app/services",
           "skipTests": true
+        },
+        "@schematics/angular:interceptor": {
+          "path": "src/app/core/interceptors",
+          "skipTests": true
         }
       },
       "root": "",
