--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/.venv": true
-    }
+    },
+    "javascript.preferences.importModuleSpecifier": "non-relative"
 }
