--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -8,11 +8,11 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "path": "src/app/components",
+          "path": "src/app/features",
           "skipTests": true
         },
         "@schematics/angular:service": {
-          "path": "src/app/services",
+          "path": "src/app/core/services",
           "skipTests": true
         },
         "@schematics/angular:interceptor": {
