La ruta de perfil ahora carga el componente de perfil-info por defecto

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -8,7 +8,7 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "path": "src/app/features",
+          "path": "src/app",
           "skipTests": true
         },
         "@schematics/angular:service": {
